2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box_gap), (draw_extension): Add
	bevel to notebooks

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_shadow_gap), (draw_box_gap):
	Replace use of deprecated function

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_hline), (draw_vline): Convert
	hline and vline functions to cairo

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box),
	(draw_handle): Make handlboxes appear "attached" to their child

2008-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	Use the right text color for text in progress bars.

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box), (draw_arrow): Fix spin
	buttons for RTL locales

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c:
	(paint_button): Reduce radius on buttons without an extra shadow and
	reduce opacity of extra shadow on insensitive buttons
	(draw_shadow): Extend shadow on spinbutton entry widgets to allow
	buttons to appears "inside" the entry
	(draw_box): Turn extra shadow off for some other widgets and draw a
	shadow so that spin button buttons appear "inside" the entry
	(draw_arrow): Tweak placement for spin buttons

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the color of prelit menu items in the combobox menu.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	* themes/Industrial/gtk-2.0/gtkrc:
	* themes/Mist/gtk-2.0/gtkrc:
	Port the workarounds for GtkComboBox (cell renderer),
	GtkCList/GtkCTree and GtkList to other color scheme supporting
	themes in gtk-engines.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Use the special name menus get for comboboxes to work around the text