@@ -1,3 +1,10 @@
+2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/crux/src/crux-draw.c: (draw_box):
+	Fix a regression:
+	crux would access widget to check the focused state even if widget
+	is NULL. This could potentially crash applications.
+
 2008-03-03  Thomas Wood  <thos@gnome.org>
 
 	* engines/crux/src/crux-draw.c: (draw_box_gap), (draw_extension): Add
